# indiekit-mcp

./: README.md  README.zh-CN.md  indiekit_mcp.py  package-lock.json  package.json  pyproject.toml  tsup.config.ts
src/: cli.ts  discovery.ts  index.ts  proxy.ts  registry.ts  server.ts  types.ts
src/__tests__/: registry.test.ts
